Say Hello to all the world (Web app) completed

--- a/Orientation/week-12/day-02/IntroductionToSpring/springstart/src/main/resources/templates/greeting.html
+++ b/Orientation/week-12/day-02/IntroductionToSpring/springstart/src/main/resources/templates/greeting.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Hello, <span th:text="${name}"></span>! (It is a web page.)</p>
+<span th:text="${greeting}" th:style="${style}"></span>, <span th:text="${name}"></span>! This site was loaded <span th:text="${greetCount}"></span> times since last server start.</p>
 </body>
 </html>
