Some minor code refactor

--- a/Orientation/week-12/day-02/IntroductionToSpring/springstart/src/main/resources/templates/fizzBuzzWoof.html
+++ b/Orientation/week-12/day-02/IntroductionToSpring/springstart/src/main/resources/templates/fizzBuzzWoof.html
@@ -5,7 +5,7 @@
     <title>FizzBuzzWoof</title>
 </head>
 <body>
-    <p th:style="'font-size:' + ${fontSize} + 'px'">
+    <p th:style="|font-size: ${fontSize}px|">
         Hello! This site was loaded <span th:text="${FizzBuzzWoof}"></span> times since last server start.
     </p>
 </body>
