Bank of Simba - Formatting the Balance - completed

--- a/Orientation/week-12/day-06/Thymeleaf, Models, Views/BankOfSimba/src/main/resources/templates/account.html
+++ b/Orientation/week-12/day-06/Thymeleaf, Models, Views/BankOfSimba/src/main/resources/templates/account.html
@@ -14,7 +14,7 @@
         </tr>
         <tr th:object="${account}">
             <td th:text="*{name}"></td>
-            <td th:text="*{balance}"></td>
+            <td th:text="|*{#numbers.formatDecimal(balance, 0, 'NONE', 2, 'POINT')} Zebra|"></td>
             <td th:text="*{animalType}"></td>
         </tr>
     </table>
