Basic Webshop project - GET /only-available completed

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
     <header th:fragment="header">
         <h1>Martin's shop</h1>
         <nav>
-            <button>Only available</button>
+            <button th:action="@{/only-available}">Only available</button>
             <button>Cheapest first</button>
             <button>Contains nike</button>
             <button>Average stock</button>
