--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
@@ -9,8 +9,8 @@
     <header th:fragment="header">
         <h1>Martin's shop</h1>
         <nav>
-            <button th:action="@{/only-available}">Only available</button>
-            <button>Cheapest first</button>
+            <a th:href="@{/only-available}"><button>Only available</button></a>
+            <a th:href="@{/cheapest-first}"><button>Cheapest first</button></a>
             <button>Contains nike</button>
             <button>Average stock</button>
             <button>Most Expensive available</button>
