Basic Webshop project - GET /most-expensive completed

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/index.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <header th:replace="header :: header"></header>
-    <table th:replace="itemsTable :: items-table"></table>
+    <div th:if="${items != null}">
+        <table  th:replace="itemsTable :: items-table"></table>
+    </div>
+    <h2 th:if="${averageStock != null}"
+        th:text="|Average stock: ${#numbers.formatDecimal(averageStock, 0, 'NONE', 1, 'POINT')}|"></h2>
 </body>
 </html>
