--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/header.html
@@ -11,9 +11,9 @@
         <nav>
             <a th:href="@{/only-available}"><button>Only available</button></a>
             <a th:href="@{/cheapest-first}"><button>Cheapest first</button></a>
-            <button>Contains nike</button>
-            <button>Average stock</button>
-            <button>Most Expensive available</button>
+            <a th:href="@{/contains-nike}"><button>Contains nike</button></a>
+            <a th:href="@{/average-stock}"><button>Average stock</button></a>
+            <a th:href="@{/most-expensive}"><button>Most Expensive available</button></a>
         </nav>
     </header>
 </body>
