Basic Webshop project - Start working on Optional tasks

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/itemsTable.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/itemsTable.html
@@ -16,7 +16,7 @@
         <tr th:each="item : ${items}" th:object="${item}">
             <td th:text="*{name}"></td>
             <td th:text="*{description}"></td>
-            <td th:text="*{price}"></td>
+            <td th:text="|*{#numbers.formatDecimal(price, 1, 'NONE', 1, 'POINT')} Kč|"></td>
             <td th:text="*{quantity}"></td>
         </tr>
     </table>
