--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/searchBar.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/searchBar.html
@@ -8,7 +8,7 @@
 <body>
     <form th:fragment="search-bar" th:action="@{/search}" th:method="POST">
         <p>Search for:</p>
-        <input type="text" name="text" value="...something like Nike">
+        <input type="text" name="text" placeholder="...something like Nike">
         <input type="submit" value="Search">
     </form>
 </body>
