Basic Webshop project - some minor changes

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
@@ -19,7 +19,7 @@ nav a {
   margin-right: 10px;
 }
 
-nav button {
+button, input.button {
   text-transform: uppercase;
   background-color: rgb(244, 73, 59);
   border-style: hidden;
