--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/searchBar.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/searchBar.html
@@ -9,7 +9,7 @@
     <form th:fragment="search-bar" th:action="@{/search}" th:method="POST">
         <p>Search for:</p>
         <input type="text" name="text" placeholder="...something like Nike">
-        <input type="submit" value="Search">
+        <input class="button" type="submit" value="Search">
     </form>
 </body>
 </html>
