My Webshop project - make page silky smooth befor going on optional tasks

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/itemsTable.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/itemsTable.html
@@ -14,10 +14,10 @@
             <th>Quantity of stock</th>
         </tr>
         <tr th:each="item : ${items}" th:object="${item}">
-            <td th:text="*{name}"></td>
+            <td class="name" th:text="*{name}"></td>
             <td th:text="*{description}"></td>
-            <td th:text="|*{#numbers.formatDecimal(price, 1, 'NONE', 1, 'POINT')} Kč|"></td>
-            <td th:text="*{quantity}"></td>
+            <td class="price" th:text="|*{#numbers.formatDecimal(price, 1, 'NONE', 1, 'POINT')} Kč|"></td>
+            <td class="quantity"th:text="*{quantity}"></td>
         </tr>
     </table>
 </body>
