--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
@@ -19,11 +19,47 @@ nav a {
   margin-right: 10px;
 }
 
-button, input.button {
+button {
   text-transform: uppercase;
+}
+
+button, input.button {
   background-color: rgb(244, 73, 59);
   border-style: hidden;
   border-radius: 3px;
   color: white;
   height: 25px;
+}
+
+table {
+  width: 785px;
+}
+
+table th {
+  height: 75px;
+  background-color: rgb(112, 239, 251);
+}
+
+.name {
+  font-size: 19px;
+}
+
+.price,.quantity {
+  text-align: center;
+  font-size: 20px;
+}
+
+form p {
+  margin-bottom: 0;
+  color: rgb(238, 130, 108);
+  font-size: 10px;
+}
+
+input.searchBar {
+  width: 700px;
+  height: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: rgb(244, 73, 59);
+  border-width: 2px;
 }
