--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
@@ -40,13 +40,21 @@ table th {
   background-color: rgb(112, 239, 251);
 }
 
-.name {
+.name ,.type {
   font-size: 19px;
+}
+
+.type {
+  width: 120px;
 }
 
 .price,.quantity {
   text-align: center;
   font-size: 20px;
+}
+
+.price {
+  width: 140px;
 }
 
 form p {
