--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/static/styles.css
@@ -7,16 +7,39 @@ body {
   width: 785px;
 }
 
-header h1 {
-  color: rgb(31, 194, 216);
+header {
+  margin-bottom: 20px;
   border-style: solid;
   border-width: 0 0 1px 0;
   border-color: rgb(31, 194, 216);
-  height: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
-nav a {
-  margin-right: 10px;
+header h1 {
+  margin-bottom: 5px;
+  color: rgb(31, 194, 216);
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
@@ -57,6 +80,10 @@ table th {
   width: 140px;
 }
 
+form {
+  margin-bottom: 15px;
+}
+
 form p {
   margin-bottom: 0;
   color: rgb(238, 130, 108);
@@ -64,7 +91,7 @@ form p {
 }
 
 input.searchBar {
-  width: 700px;
+  width: 710px;
   height: 20px;
   border-style: solid;
   border-radius: 5px;
