--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/index.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/index.html
@@ -7,10 +7,11 @@
     <link th:href="@{/styles.css}" rel="stylesheet" />
 </head>
 <body>
-    <header th:replace="header :: header"></header>
-    <form th:replace="searchBar :: search-bar"></form>
+    <header th:replace="fragments/header :: header"></header>
+    <nav th:replace="fragments/navBar :: nav-bar"></nav>
+    <form th:replace="fragments/searchBar :: search-bar"></form>
     <div th:if="${items != null}">
-        <table  th:replace="itemsTable :: items-table"></table>
+        <table  th:replace="fragments/itemsTable :: items-table"></table>
     </div>
     <h2 th:if="${averageStock != null}"
         th:text="|Average stock: ${#numbers.formatDecimal(averageStock, 0, 'NONE', 1, 'POINT')}|"></h2>
