My Webshop project - More Filters layout + filter by types done (easy type addition implemented)

--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/header.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 <body>
     <header th:fragment="header">
         <a th:href="@{/webshop}"><h1>Martin's shop</h1></a>
-        <a th:href="@{/more-filtres}"><h1>More >></h1></a>
+        <a th:href="@{/more-filters}"><h1>More >></h1></a>
     </header>
 </body>
 </html>
