--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/itemsTable.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/itemsTable.html
@@ -18,7 +18,10 @@
             <td class="name" th:text="*{name}"></td>
             <td class="type" th:text="*{type.label}"></td>
             <td th:text="*{description}"></td>
-            <td class="price" th:text="|*{#numbers.formatDecimal(price, 1, 'NONE', 1, 'POINT')} Kč|"></td>
+            <div th:switch="${currency}">
+                <td th:case="Kč" class="price" th:text="|*{#numbers.formatDecimal(price, 1, 'NONE', 1, 'POINT')} ${currency}|"></td>
+                <td th:case="€" class="price" th:text="|*{#numbers.formatDecimal(price/26, 1, 'NONE', 2, 'POINT')} ${currency}|"></td>
+            </div>
             <td class="quantity"th:text="*{quantity}"></td>
         </tr>
     </table>
