--- a/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/searchBar.html
+++ b/Orientation/week-12/day-06/BasicWebshop/src/main/resources/templates/fragments/searchBar.html
@@ -6,7 +6,7 @@
     <link th:href="@{/styles.css}" rel="stylesheet" />
 </head>
 <body>
-    <form th:fragment="search-bar" th:action="@{/search}" th:method="POST">
+    <form th:fragment="search-bar" th:action="@{/search}" method="POST">
         <p>Search for:</p>
         <input class="searchBar" type="text" name="text" placeholder="...something like Nike">
         <input class="button" type="submit" value="Search">
