Dependencies - Email validator finished

--- a/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/useful.html
+++ b/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/useful.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="/useful/colored">Colored Background</a><br>
-    <a href="">Email validator</a><br>
+    <a href="/useful/email?email=is@this.valid">Email validator</a><br>
     <a href="">Caesar encoder/decoder</a>
 </body>
 </html>
