Dependencies - Useful Utilities - Caesar encoder/decoder completed

--- a/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/useful.html
+++ b/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/useful.html
@@ -8,6 +8,7 @@
 <body>
     <a href="/useful/colored">Colored Background</a><br>
     <a href="/useful/email?email=is@this.valid">Email validator</a><br>
-    <a href="">Caesar encoder/decoder</a>
+    <a href="/useful/encoder?text=example&number=1">Caesar encoder</a><br>
+    <a href="/useful/decoder?text=fybnqmf&number=1">Caesar decoder</a>
 </body>
 </html>
