--- a/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/gfa/gfa.html
+++ b/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/gfa/gfa.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Greenfox App Class</title>
 </head>
 <body>
+    <p th:text="|There are ${usersCount} students.|"></p>
     <a href="/gfa/list">List All Students</a></br>
     <a href="/gfa/add">Add new Student</a></br>
 </body>
