Dependecies - Greenfox App Class - Student check completed

--- a/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/gfa/gfa.html
+++ b/Orientation/week-14/day-04/Dependencies/src/main/resources/templates/gfa/gfa.html
@@ -9,5 +9,6 @@
     <p th:text="|There are ${usersCount} students.|"></p>
     <a href="/gfa/list">List All Students</a></br>
     <a href="/gfa/add">Add new Student</a></br>
+    <a href="/gfa/check">Check student</a></br>
 </body>
 </html>
