--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <li>
-        <a href="index.html">Information</a></br>
+        <a href="information.html">Information</a></br>
     </li>
 
     <img src="/imgs/greenfox.png">
