Programming Fox Club - Nutrition Store - completed with optional (preselected nutrition)

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
@@ -3,12 +3,10 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Information</title>
 </head>
 <body>
-    <li>
-        <a href="information.html">Information</a></br>
-    </li>
+    <nav th:replace="navigation-bar :: nav-bar"></nav>
 
     <img src="/imgs/greenfox.png">
 
