Programming Fox Club - Trick center - all non optional tasks done

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
@@ -18,7 +18,7 @@
         You know no tricks, yet. Go and learn some.
     </div>
     <div th:if="${fox.getTricks().size()} > 0">
-        <li th:each="trick : ${fox.getTricks()}">
+        <li th:each="trick : ${fox.getTricks()}" th:text="${trick}">
     </div>
 
 </body>
