--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/navigation-bar.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/navigation-bar.html
@@ -8,10 +8,13 @@
 <body>
     <nav th:fragment="nav-bar">
         <li>
-            <a th:href="'/?name=' + ${fox.getName()}">Information</a></br>
+            <a th:href="'/?name=' + ${fox.getName()}">Information</a>
         </li>
         <li>
-            <a th:href="'/nutritionStore?name=' + ${fox.getName()}">Nutrition Store</a></br>
+            <a th:href="'/nutritionStore?name=' + ${fox.getName()}">Nutrition Store</a>
+        </li>
+        <li>
+            <a th:href="'/trickCenter?name=' + ${fox.getName()}">Trick Center</a>
         </li>
     </nav>
 </body>
