Programming Fox Club - Trick center - list only tricks that aren't learned already

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/trick-center.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/trick-center.html
@@ -13,7 +13,7 @@
         <label>Tricks</label>
         <select name="trick">
             <option
-                    th:each="trick : ${T(com.greenfox.programmingfoxclub.model.Trick).values()}"
+                    th:each="trick : ${tricksToLearn}"
                     th:value="${trick}"
                     th:text="${trick}">
             </option>
