Programming Fox Club - Action History - completed

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
@@ -21,5 +21,11 @@
         <li th:each="trick : ${fox.getTricks()}" th:text="${trick}">
     </div>
 
+    <h1>Action history</h1>
+
+    <p th:each="log : ${fox.getChangeLog().getLastNActions(5)}">
+    <li th:text="${log.toString()}"></li>
+    </p>
+
 </body>
 </html>
