--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/navigation-bar.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/navigation-bar.html
@@ -16,6 +16,9 @@
         <li>
             <a th:href="'/trickCenter?name=' + ${fox.getName()}">Trick Center</a>
         </li>
+        <li>
+            <a th:href="'/actionHistory?name=' + ${fox.getName()}">Action History</a>
+        </li>
     </nav>
 </body>
 </html>
