--- a/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Todos for today</h1>
+    <h1>TODOS FOR TODAY:</h1>
+
+    <a href="/todo/add">Add new todo</a>
+    <p></p>
+
     <table>
         <tr>
             <th>ID</th>
