--- a/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -27,6 +27,9 @@
             <td>
                 <a th:href="|/todo/${todo.getId()}/delete|">delete</a>
             </td>
+            <td>
+                <a th:href="|/todo/${todo.getId()}/edit|">edit</a>
+            </td>
         </tr>
     </table>
 </body>
