--- a/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/edit.html
+++ b/Orientation/week-15/day-06/Spring+SQL/ConnectionWithMySQL/src/main/resources/templates/edit.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Add new todo</h1>
 
-    <form action="#" th:action="|/todo/${todo.getId()}/edit|" th:object="${todo}" method="post">
+    <form action="#" th:action="|/todo/edit|" th:object="${todo}" method="post">
+        <input type="hidden" th:field="*{id}">
         <input type="text" th:field="*{title}" /></br>
         <label>Urgent</label><input type="checkbox" th:field="*{urgent}" /></br>
         <label>Done</label><input type="checkbox" th:field="*{done}" /></br>
