--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
@@ -6,7 +6,7 @@
     <title>Edit Todo</title>
 </head>
 <body>
-    <h1>Add new todo</h1>
+    <h1>Edit todo</h1>
 
     <form action="#" th:action="|/todo/edit|" th:object="${todo}" method="post">
         <input type="hidden" th:field="*{id}">
