--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/todo-list.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/todo-list.html
@@ -10,7 +10,7 @@
     <h1>TODOS FOR TODAY:</h1>
 
     <a href="/todo/add">Add new todo</a>
-    <a href="/todo/assignees">List of Assignees</a>
+    <a href="/assignee">List of Assignees</a>
     <p></p>
 
     <form action="/todo/search" method="post">
