--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
@@ -10,9 +10,15 @@
 
     <form action="#" th:action="|/todo/edit|" th:object="${todo}" method="post">
         <input type="hidden" th:field="*{id}">
-        <input type="text" th:field="*{title}" /></br>
-        <label>Urgent</label><input type="checkbox" th:field="*{urgent}" /></br>
-        <label>Done</label><input type="checkbox" th:field="*{done}" /></br>
+        <label>Title: </label><input type="text" th:field="*{title}" /></br>
+        <label>Urgent </label><input type="checkbox" th:field="*{urgent}" /></br>
+        <label>Done </label><input type="checkbox" th:field="*{done}" /></br>
+        <label>Assignee: </label><select th:field="*{assignee}">
+            <option th:value="null" th:text="''"></option>
+            <option th:each="assignee : ${assignees}"
+                    th:value="${assignee.getId()}"
+                    th:text="${assignee.getName()}"></option>
+        </select></br>
         <input type="submit" value="Submit"><a th:href="@{/todo/}">Cancel</a>
     </form>
 </body>
