--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/todo-list.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/todo-list.html
@@ -31,12 +31,14 @@
             <th>TITLE</th>
             <th>DONE</th>
             <th>URGENT</th>
+            <th>ASSIGNEE</th>
         </tr>
         <tr th:each="todo : ${todos}">
             <td th:text="${todo.getId()}"></td>
             <td th:text="${todo.getTitle()}"></td>
             <td th:text="${todo.isDone()}"></td>
             <td th:text="${todo.isUrgent()}"></td>
+            <td th:text="${todo.getAssignee()?.getName()}"></td>
             <td>
                 <a th:href="|/todo/${todo.getId()}/delete|">delete</a>
             </td>
