Database Integration - TodoApp & Assignees - can click on assignee to get all his todos

--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/assignees-list.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/assignees-list.html
@@ -23,7 +23,7 @@
         </tr>
         <tr th:each="assignee : ${assignees}">
             <td th:text="${assignee.getId()}"></td>
-            <td th:text="${assignee.getName()}"></td>
+            <td><a th:href="'/assignee/' + ${assignee.getId()} + '/todos'" th:text="${assignee.getName()}"></a></td>
             <td th:text="${assignee.getEmail()}"></td>
             <td>
                 <a th:href="|/assignee/${assignee.getId()}/delete|">delete</a>
