--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
@@ -10,7 +10,10 @@
 
     <form action="#" th:action="|/todo/edit|" th:object="${todo}" method="post">
         <input type="hidden" th:field="*{id}">
+        <span th:text="|Creation Date: *{creationDate}|"></span></br>
         <label>Title: </label><input type="text" th:field="*{title}" /></br>
+        <label>Description: </label><input type="text" th:field="*{description}" /></br>
+        <label>Content: </label><input type="text" th:field="*{content}" /></br>
         <label>Urgent </label><input type="checkbox" th:field="*{urgent}" /></br>
         <label>Done </label><input type="checkbox" th:field="*{done}" /></br>
         <label>Assignee: </label><select th:field="*{assignee}">
@@ -19,6 +22,7 @@
                     th:value="${assignee.getId()}"
                     th:text="${assignee.getName()}"></option>
         </select></br>
+        <label>Due Date: </label><input type="datetime-local" th:field="*{dueDate}"></br>
         <input type="submit" value="Submit"><a th:href="@{/todo/}">Cancel</a>
     </form>
 </body>
