--- a/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
+++ b/Orientation/week-16/day-04/Database Integration/TodoApp&Assignees/src/main/resources/templates/edit.html
@@ -22,7 +22,7 @@
                     th:value="${assignee.getId()}"
                     th:text="${assignee.getName()}"></option>
         </select></br>
-        <label>Due Date: </label><input type="datetime-local" th:field="*{dueDate}"></br>
+        <label>Due Date: </label><input type="date" th:field="*{dueDate}"></br>
         <input type="submit" value="Submit"><a th:href="@{/todo/}">Cancel</a>
     </form>
 </body>
