Database Integration - Nutrition working with database and setting default nutritients on fox creating

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/information.html
@@ -10,7 +10,7 @@
 
     <img src="/imgs/greenfox.png">
 
-    <p th:text="|This is Mr. ${fox.getName()}. Currently living on ${fox.getFood()} and ${fox.getDrink()}. He Knows ${fox.getTricks().size()} tricks.|"></p>
+    <p th:text="|This is Mr. ${fox.getName()}. Currently living on ${fox.getFood().getName()} and ${fox.getDrink().getName()}. He Knows ${fox.getTricks().size()} tricks.|"></p>
 
     <h1>Known tricks</h1>
 
