Database Integration - Finally! All of old functionality working with SQL database as it should!!!

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/action-history.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/action-history.html
@@ -8,8 +8,8 @@
 <body>
     <nav th:replace="navigation-bar :: nav-bar"></nav>
 
-    <p th:each="log : ${fox.getChangeLog().getHistoryActions()}">
-        <li th:text="${log.toString()}"></li>
+    <p th:each="historyAction : ${historyActions}">
+        <li th:text="${historyAction.toString()}"></li>
     </p>
 
 
