Database Integration - Fox Club with users - well now everything is working as berfore (last 5 history logs on information page)

--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/action-history.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/action-history.html
@@ -8,7 +8,7 @@
 <body>
     <nav th:replace="navigation-bar :: nav-bar"></nav>
 
-    <p th:each="historyAction : ${historyActions}">
+    <p th:each="historyAction : ${last5Action}">
         <li th:text="${historyAction.toString()}"></li>
     </p>
 
