--- a/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/login.html
+++ b/Orientation/week-14/day-06/ProgrammFoxClub/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
    <p th:if="${error} != null" th:style="'color: red;'" th:text="${error}"></p>
    <p th:unless="${error != null}">Please provide a name, so you can associate it to your pet!</p>
 
-    <form action="/login" method="post">
+    <form action="./login" method="post">
         <label>Name</label>
         <input type="text" name="name">
         <input type="submit" name="submit" value="GO">
