The Reddit Project - delete default value of score in Post entity since long primitive has the same default valu

--- a/Orientation/week-16/day-06/TheReddit/src/main/resources/static/style/styles.css
+++ b/Orientation/week-16/day-06/TheReddit/src/main/resources/static/style/styles.css
@@ -3,9 +3,9 @@
     border: none;
     padding: 0!important;
     /*optional*/
-    font-family: arial, sans-serif;
+    font-family: "Times New Roman", sans-serif;
     /*input has OS specific font-family*/
-    color: #069;
+    color: #640ff2;
     text-decoration: underline;
     cursor: pointer;
 }
